syntax = "proto3";
package euc_backend;


import "club-fee/club-fee.proto";

message ClubFeeReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional ClubFee payload = 4;
}

message ClubFeeListDataReply {
  repeated ClubFee club_fee_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ClubFeeListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  ClubFeeListDataReply payload = 4;
}
